finish signing onto the placeholder part1

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -741,7 +741,7 @@ See https://github.com/adobe-type-tools/cmap-resources
               </div>
               <div id="addSignatureControls">
                 <div id="horizontalContainer">
-                  <div id="addSignatureDescriptionContainer">
+                  <div id="addSignatureDescriptionContainer" style="display: none;">
                     <label for="addSignatureDescInput" data-l10n-id="pdfjs-editor-add-signature-description-label"></label>
                     <span id="addSignatureDescription" class="inputWithClearButton">
                       <input id="addSignatureDescInput" type="text" data-l10n-id="pdfjs-editor-add-signature-description-input" tabindex="0"></input>
@@ -750,7 +750,7 @@ See https://github.com/adobe-type-tools/cmap-resources
                   </div>
                   <button id="clearSignatureButton" type="button" data-l10n-id="pdfjs-editor-add-signature-clear-button" tabindex="0"><span data-l10n-id="pdfjs-editor-add-signature-clear-button-label"></span></button>
                 </div>
-                <div id="addSignatureSaveContainer">
+                <div id="addSignatureSaveContainer" style="display: none;">
                   <input type="checkbox" id="addSignatureSaveCheckbox"></input>
                   <label for="addSignatureSaveCheckbox" data-l10n-id="pdfjs-editor-add-signature-save-checkbox"></label>
                   <span></span>
