[Editor] Fix the focus outline for the comment dialog buttons
And add an aria label to the dialog.

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -792,12 +792,12 @@ See https://github.com/adobe-type-tools/cmap-resources
         </div>
       </dialog>
 
-      <dialog class="dialog commentManager" id="commentManagerDialog">
+      <dialog class="dialog commentManager" id="commentManagerDialog" aria-labelledby="commentManagerTitle">
         <div class="mainContainer">
           <div class="title" id="commentManagerToolbar">
-            <span id="commentManagerTitle" role="sectionhead" data-l10n-id="pdfjs-editor-edit-comment-dialog-title-when-adding" tabindex="0"></span>
+            <span id="commentManagerTitle" role="sectionhead" data-l10n-id="pdfjs-editor-edit-comment-dialog-title-when-adding"></span>
           </div>
-          <textarea id="commentManagerTextInput" data-l10n-id="pdfjs-editor-edit-comment-dialog-text-input"></textarea>
+          <textarea id="commentManagerTextInput" data-l10n-id="pdfjs-editor-edit-comment-dialog-text-input" tabindex="0"></textarea>
           <div class="dialogButtonsGroup">
             <button id="commentManagerCancelButton" type="button" class="secondaryButton" tabindex="0">
               <span data-l10n-id="pdfjs-editor-edit-comment-dialog-cancel-button"></span>
