--- a/web/viewer.html
+++ b/web/viewer.html
@@ -251,6 +251,7 @@ See https://github.com/adobe-type-tools/cmap-resources
                     </button>
                     <div class="editorParamsToolbar hidden menu" id="editorCommentParamsToolbar">
                       <div id="editorCommentsSidebar" class="menuContainer comment sidebar" role="landmark" aria-labelledby="editorCommentsSidebarHeader">
+                        <div id="editorCommentsSidebarResizer" class="sidebarResizer"></div>
                         <div id="editorCommentsSidebarHeader" role="heading" aria-level="2">
                           <span class="commentCount">
                             <span id="editorCommentsSidebarTitle" data-l10n-id="pdfjs-editor-comments-sidebar-title" data-l10n-args='{ "count": 0 }'></span>
