save face auth log done

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -882,11 +882,11 @@ See https://github.com/adobe-type-tools/cmap-resources
           </div>
           <div style="display: flex; height: 36px; align-items: center; padding: 0 12px; gap: 4px; margin-top: 12px;">
             <input type="checkbox" id="userConsent1" name="userConsent1" />
-            <label for="userConsent1">我已审阅并确认上述文件内容无误</label>
+            <label for="userConsent1">我已审阅并确认上述内容无误</label>
           </div>
           <div style="display: flex; height: 36px; align-items: center; padding: 0 12px; gap: 4px;">
             <input type="checkbox" id="userConsent2" name="userConsent2" />
-            <label for="userConsent2">我已阅读并同意<a href="http://i-sign.cn?doc=e_sign_agreement" target="_blank" style="color: inherit; font-weight: 600; text-decoration: none;">《电子签署授权协议》</a></label>
+            <label for="userConsent2">我已阅读并同意<a href="https://i-sign.cn/?doc=e_sign_agreement" target="_blank" style="color: inherit; font-weight: 600; text-decoration: none;">《电子签署授权协议》</a></label>
           </div>
           <div style="display: flex; height: 36px; align-items: center; padding: 0 12px; gap: 4px;">
             <input type="checkbox" id="userConsent3" name="userConsent3" />
