--- a/web/viewer.html
+++ b/web/viewer.html
@@ -27,7 +27,7 @@ See https://github.com/adobe-type-tools/cmap-resources
 <!--#if GENERIC || CHROME-->
     <meta name="google" content="notranslate">
 <!--#endif-->
-    <title>PDF.js viewer</title>
+    <title>Dotti</title>
 
 <!--#if MOZCENTRAL-->
 <!--#include viewer-snippet-firefox-extension.html-->
@@ -148,7 +148,10 @@ See https://github.com/adobe-type-tools/cmap-resources
           <div id="toolbarContainer">
             <div id="toolbarViewer" class="toolbarHorizontalGroup">
               <div id="toolbarViewerLeft" class="toolbarHorizontalGroup">
-                <div class="dotti_brand">Dotti</div>
+                <div class="dotti_brand">
+                  <img style="width: 24px;" src="https://dev-memorybread-oss.oss-cn-shanghai.aliyuncs.com/Dotti/dotti_icon_border_svg.svg" alt="logo" />
+                  <div>Dotti</div>
+                </div>
                 <button style="display: none;" id="sidebarToggleButton" class="toolbarButton" type="button" tabindex="0" data-l10n-id="pdfjs-toggle-sidebar-button" aria-expanded="false" aria-haspopup="true" aria-controls="sidebarContainer">
                   <span data-l10n-id="pdfjs-toggle-sidebar-button-label"></span>
                 </button>
@@ -356,7 +359,7 @@ See https://github.com/adobe-type-tools/cmap-resources
                   </div>
                 </div>
 
-                <button style="display: none;" class="dotti_button" id="submitSignatureButton">提交签名</button>
+                <button style="display: none;" class="dotti_button" id="submitSignatureButton">提交</button>
 
                 <div id="editorModeSeparator" class="verticalToolbarSeparator"></div>
 
@@ -872,25 +875,21 @@ See https://github.com/adobe-type-tools/cmap-resources
             <div id="signingConfirmDialogDocumentFingerprintDiv" style="flex: 1; word-break: break-all; font-family: monospace;"></div>
           </div>
           <div style="display: flex; padding: 0 12px; margin: 16px 0;">
-            <div style="flex: none; width: 96px;">法律效力说明：</div>
+            <div style="flex: none; width: 96px;">签署授权说明：</div>
             <div style="flex: 1; display: flex; flex-direction: column; gap: 12px;">
-              <div>该签署与您本人手写签名/盖章具有同等法律效力。</div>
-<!--              <div>签署由【Dotti电子签平台】使用其合法数字证书代您完成，签署行为全程留痕可追溯。</div>-->
-<!--              <div>签署由【Dotti电子签平台】代您加盖其合法数字证书，签署行为全程留痕可追溯。</div>-->
-              <div>您已确认的签名/印章将由【Dotti电子签平台】在技术上加盖平台合法数字证书，签署行为全程留痕、可追溯，平台仅提供技术加盖服务，不代替您进行签署。</div>
+              <div>我已阅读并理解以上内容，确认信息无误，同意由【Dotti电子签平台】使用其自有电子签章/证书，代我完成本文件的电子签署。</div>
+              <div>本次签署为我本人真实意愿，与我亲自签署具有同等法律效力。</div>
+
+<!--              <div>为完成本次电子签署，签署方特此明确授权【Dotti电子签平台】使用其自有的电子签章/证书，在本文件上代签署方完成电子签名或加盖电子印章</div>-->
+<!--              <div>该代签署行为系基于签署方真实意思表示和确认，与签署方亲自完成签署具有同等法律效力</div>-->
+<!--              <div>平台仅在签署方确认签署内容无误并同意授权的前提下执行代签，不得擅自修改或重复使用签署内容。平台同时提供文件防篡改校验与签署留痕服务</div>-->
             </div>
           </div>
-          <div style="display: flex; height: 36px; align-items: center; padding: 0 12px; gap: 4px; margin-top: 12px;">
-            <input type="checkbox" id="userConsent1" name="userConsent1" />
-            <label for="userConsent1">我已审阅并确认上述内容无误</label>
-          </div>
-          <div style="display: flex; height: 36px; align-items: center; padding: 0 12px; gap: 4px;">
-            <input type="checkbox" id="userConsent2" name="userConsent2" />
-            <label for="userConsent2">我已阅读并同意<a href="https://i-sign.cn/?doc=e_sign_agreement" target="_blank" style="color: inherit; font-weight: 600; text-decoration: none;">《电子签署授权协议》</a></label>
-          </div>
-          <div style="display: flex; height: 36px; align-items: center; padding: 0 12px; gap: 4px;">
-            <input type="checkbox" id="userConsent3" name="userConsent3" />
-            <label for="userConsent3">我同意由平台代为加盖签名/签章证书</label>
+          <div style="display: flex; flex-direction: column; padding: 0 12px; gap: 4px; margin-top: 12px;">
+            <div>点击【确认并进行身份验证】即表示:</div>
+            <div>
+              我已阅读并同意<a href="https://i-sign.cn/?doc=e_sign_agreement" target="_blank" style="color: inherit; font-weight: 600; text-decoration: none;">《电子签署授权协议》</a>，并授权平台代我完成签署。
+            </div>
           </div>
           <div style="display: flex; height: 48px; align-items: center; padding: 0 12px; gap: 8px; justify-content: flex-end;">
             <button id="signingConfirmDialogCancelButton">取消</button>
@@ -911,7 +910,11 @@ See https://github.com/adobe-type-tools/cmap-resources
             <span data-l10n-id="pdfjs-editor-undo-bar-close-button-label"></span>
           </button>
         </div>
-      </div> <!-- editorUndoBar -->
+      </div> <!-- editorUndoBar -->--
+
+      <div id="jump-sign-button" class="rainbow-btn" style="display: none;">
+        跳转至下一签名处
+      </div>
 
     </div> <!-- outerContainer -->
     <div id="printContainer"></div>
