assign date value, apply stamping privlege, fix minor bugs

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -878,7 +878,7 @@ See https://github.com/adobe-type-tools/cmap-resources
             <div style="flex: none; width: 96px;">签署授权说明：</div>
             <div style="flex: 1; display: flex; flex-direction: column; gap: 12px;">
               <div>我已阅读并理解以上内容，确认信息无误，同意由【Dotti电子签平台】使用其自有电子签章/证书，代我完成本文件的电子签署。</div>
-              <div>本次签署为我本人真实意愿，与我亲自签署具有同等法律效力。</div>
+              <div>本次签署为我本人真实意思表示，与我亲自签署具有同等法律效力。</div>
 
 <!--              <div>为完成本次电子签署，签署方特此明确授权【Dotti电子签平台】使用其自有的电子签章/证书，在本文件上代签署方完成电子签名或加盖电子印章</div>-->
 <!--              <div>该代签署行为系基于签署方真实意思表示和确认，与签署方亲自完成签署具有同等法律效力</div>-->
@@ -888,7 +888,7 @@ See https://github.com/adobe-type-tools/cmap-resources
           <div style="display: flex; flex-direction: column; padding: 0 12px; gap: 4px; margin-top: 12px;">
             <div>点击【确认并进行身份验证】即表示:</div>
             <div>
-              我已阅读并同意<a href="https://i-sign.cn/?doc=e_sign_agreement" target="_blank" style="color: inherit; font-weight: 600; text-decoration: none;">《电子签署授权协议》</a>，并授权平台代我完成签署。
+              我已阅读并同意<a href="https://i-sign.cn/?doc=e_sign_agreement" target="_blank" style="color: inherit; font-weight: 600; text-decoration: none; user-select: none;">《电子签署授权协议》</a>，并授权平台代我完成签署。
             </div>
           </div>
           <div style="display: flex; height: 48px; align-items: center; padding: 0 12px; gap: 8px; justify-content: flex-end;">
