Move Rotate Clockwise button to main toolbar

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -284,6 +284,10 @@ See https://github.com/adobe-type-tools/cmap-resources
               </div>
               <div id="toolbarViewerMiddle" class="toolbarHorizontalGroup">
                 <div class="toolbarHorizontalGroup">
+                  <button id="pageRotateCw" class="toolbarButton" type="button" tabindex="0" data-l10n-id="pdfjs-page-rotate-cw-button">
+                    <span data-l10n-id="pdfjs-page-rotate-cw-button-label"></span>
+                  </button>
+                  <div class="splitToolbarButtonSeparator"></div>
                   <button id="zoomOutButton" class="toolbarButton" type="button" tabindex="0" data-l10n-id="pdfjs-zoom-out-button">
                     <span data-l10n-id="pdfjs-zoom-out-button-label"></span>
                   </button>
@@ -595,9 +599,6 @@ See https://github.com/adobe-type-tools/cmap-resources
 
                       <div class="horizontalToolbarSeparator"></div>
 
-                      <button id="pageRotateCw" class="toolbarButton labeled" type="button" tabindex="0" data-l10n-id="pdfjs-page-rotate-cw-button">
-                        <span data-l10n-id="pdfjs-page-rotate-cw-button-label"></span>
-                      </button>
                       <button id="pageRotateCcw" class="toolbarButton labeled" type="button" tabindex="0" data-l10n-id="pdfjs-page-rotate-ccw-button">
                         <span data-l10n-id="pdfjs-page-rotate-ccw-button-label"></span>
                       </button>
