Change the sidebar for a views manager
Update the styles and HTML to reflect the new views manager concept.
For now, nothing about split/merge functionality is implemented or visible.
The new styles for the outline, attachments, and layers will be added later.

The thumbnail view is now accessible with the keyboard.

--- a/web/viewer-geckoview.html
+++ b/web/viewer-geckoview.html
@@ -80,13 +80,13 @@ See https://github.com/adobe-type-tools/cmap-resources
           "web-pdf_layer_viewer": "./stubs-geckoview.js",
           "web-pdf_outline_viewer": "./stubs-geckoview.js",
           "web-pdf_presentation_mode": "./stubs-geckoview.js",
-          "web-pdf_sidebar": "./stubs-geckoview.js",
           "web-pdf_thumbnail_viewer": "./stubs-geckoview.js",
           "web-preferences": "./genericcom.js",
           "web-print_service": "./pdf_print_service.js",
           "web-secondary_toolbar": "./stubs-geckoview.js",
           "web-signature_manager": "./stubs-geckoview.js",
-          "web-toolbar": "./toolbar-geckoview.js"
+          "web-toolbar": "./toolbar-geckoview.js",
+          "web-views_manager": "./stubs-geckoview.js"
         }
       }
     </script>
