Fix some css in the tree view
It's a follow-up of #20493.
And simplify a bit the js to have only one click listener in the tree instead of
having one on each toggler.

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -175,9 +175,9 @@ See https://github.com/adobe-type-tools/cmap-resources
         </div>
         <div id="sidebarContent">
           <div id="thumbnailView"></div>
-          <div id="outlineView" class="hidden"></div>
+          <div id="outlineView" class="treeView hidden"></div>
           <div id="attachmentsView" class="hidden"></div>
-          <div id="layersView" class="hidden"></div>
+          <div id="layersView" class="treeView hidden"></div>
         </div>
         <div id="sidebarResizer"></div>
       </div>
