Fix unit tests in adding a comma in the JSON for imports

--- a/test/unit/unit_test.html
+++ b/test/unit/unit_test.html
@@ -44,7 +44,7 @@
           "web-preferences": "../../web/genericcom.js",
           "web-print_service": "../../web/pdf_print_service.js",
           "web-secondary_toolbar": "../../web/secondary_toolbar.js",
-          "web-toolbar": "../../web/toolbar.js"
+          "web-toolbar": "../../web/toolbar.js",
           "web-views_manager": "../../web/views_manager.js"
         }
       }
