feat: Implement Marquee Zoom (Issue #1260)

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -708,6 +708,17 @@ See https://github.com/adobe-type-tools/cmap-resources
                         >
                           <span data-l10n-id="pdfjs-cursor-hand-tool-button-label"></span>
                         </button>
+                        <button
+                          id="cursorZoomTool"
+                          class="toolbarButton labeled"
+                          type="button"
+                          tabindex="0"
+                          data-l10n-id="pdfjs-cursor-zoom-tool-button"
+                          role="radio"
+                          aria-checked="false"
+                        >
+                          <span data-l10n-id="pdfjs-cursor-zoom-tool-button-label">Zoom</span>
+                        </button>
                       </div>
 
                       <div class="horizontalToolbarSeparator"></div>
