fix linting on the patch

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -797,6 +797,20 @@ See https://github.com/adobe-type-tools/cmap-resources
                         </button>
                       </div>
 
+                      <div class="horizontalToolbarSeparator"></div>
+
+                      <button
+                        id="rememberLastZoom"
+                        class="toolbarButton labeled"
+                        type="button"
+                        tabindex="0"
+                        data-l10n-id="pdfjs-remember-last-zoom-button"
+                        role="menuitemcheckbox"
+                        aria-checked="false"
+                      >
+                        <span data-l10n-id="pdfjs-remember-last-zoom-button-label"></span>
+                      </button>
+
                       <div id="imageAltTextSettingsSeparator" class="horizontalToolbarSeparator hidden"></div>
                       <button
                         id="imageAltTextSettings"
